Anonymous contest do not all have the same duration